zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__base_layout_is_included_in_swap_layouts.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 4762
expression: snapshot
---
00 (C): I am a tab bar                                                                                                           
01 (C): ┌ command2 ─────────────────────────────┐┌ Pane #2 ─────────────────────────────┐┌ command1 ────────────────────────────┐
02 (C): │                                       ││                                      ││                                      │
03 (C): │                                       ││                                      ││                                      │
04 (C): │                                       ││                                      ││                                      │
05 (C): │                                       ││                                      ││                                      │
06 (C): │                                       ││                                      ││                                      │
07 (C): │                                       ││                                      ││                                      │
08 (C): │      Waiting to run: command2         ││                                      ││      Waiting to run: command1        │
09 (C): │                                       ││                                      ││                                      │
10 (C): │  <ENTER> to run, <Ctrl-c> to exit     ││                                      ││  <ENTER> to run, <Ctrl-c> to exit    │
11 (C): │                                       ││                                      ││                                      │
12 (C): │                                       ││                                      ││                                      │
13 (C): │                                       ││                                      ││                                      │
14 (C): │                                       ││                                      ││                                      │
15 (C): │                                       ││                                      ││                                      │
16 (C): │                                       ││                                      ││                                      │
17 (C): └───────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
18 (C): I am a                                                                                                                   
19 (C): status bar                                                                                                               

